# rust_stm32_demo

./: README.md
aoi/: Cargo.toml
aoi/src/: lib.rs  test.rs
aoi/src/simpleAoi/: aoi.rs  ffi.rs  mod.rs
fltk/: Cargo.toml
fltk/src/: main.rs
rustStudy/: Cargo.toml
rustStudy/protos/: ProtoMsg.proto
rustStudy/src/: lib.rs  main.rs  utils.rs
rustStudy/src/mylib/: mod.rs
rustStudy/src/proto_msg/: ProtoMsg.rs  mod.rs
rustStudy/src/utils/: math.rs
rustStudy/tests/: integration_test.rs
smoltest/: Cargo.toml
stm32f103c8/: Cargo.toml  memory.x
stm32f103c8/.cargo/: config.toml
stm32f103c8/src/: bq40z50r2.rs  main.rs
stm32f103c8_embassy/: Cargo.toml  embed.toml
stm32f103c8_embassy/.cargo/: config.toml
stm32f103c8_embassy/src/: main.rs
stm32g031g8/: Cargo.toml  Embed.toml  memory.x
stm32g031g8/src/: main.rs
stm32g071gb/: Cargo.toml  readMe.txt
stm32g071gb/src/: bq40z50r2.rs  lib.rs  main.rs
stm32g071k8/: Cargo.toml  memory.x
